<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian15"
            android:textSize="12sp"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian16"
            android:textSize="12sp"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian17"
            android:textSize="12sp"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian18"
            android:textSize="12sp"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian19"
            android:textSize="12sp"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian20"
            android:textSize="12sp"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian21"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian22"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanxian23"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quanxian24"
                    android:textColor="@color/colorTextPrimary"
                    >

                </TextView>

                <EditText
                    android:id="@+id/dialog_edit_title"
                    android:hint="@string/quanxian25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quanxian26"
                    android:textColor="@color/colorTextPrimary"
                    >

                </TextView>

                <EditText
                    android:id="@+id/dialog_edit_content"
                    android:hint="@string/quanxian27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quanxian28"
                    android:textColor="@color/colorTextPrimary"
                    >

                </TextView>

                <Switch
                    android:id="@+id/clearautobaohuo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:showText="true"
                    android:textOff="@string/apponlyoff"
                    android:textOn="@string/apponlyon"
                    android:thumb="@drawable/switch_custom_thumb_selector"
                    android:track="@drawable/switch_custom_track_selector"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quanxian29"
                    android:textColor="@color/colorTextPrimary"
                    >

                </TextView>

                <Switch
                    android:id="@+id/autobaohuo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:showText="true"
                    android:textOff="@string/apponlyoff"
                    android:textOn="@string/apponlyon"
                    android:thumb="@drawable/switch_custom_thumb_selector"
                    android:track="@drawable/switch_custom_track_selector"
                    />
        </LinearLayout>

</LinearLayout>