<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/iv_sensitive"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_close_xpq"
        android:contentDescription="Notification Icon"
         />

    <View android:layout_height="16dp" android:layout_width="match_parent" />

    <TextView
        android:id="@+id/tv_sensitive_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensitive_notification_guide"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black" />

    <View android:layout_height="24dp" android:layout_width="match_parent" />

    <TextView
        android:id="@+id/tv_why_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensitive_notification_1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_why_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensitive_notification_reason"
        android:layout_marginBottom="16dp"
        android:visibility="visible"
        />
    <TextView
    android:id="@+id/tv_workaround_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sensitive_notification_2"
    android:textStyle="bold"
    android:textSize="16sp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_workaround_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensitive_notification_workarounds"
        android:visibility="gone" />
    <Button
    android:id="@+id/btn_ok"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:text="@string/ok"
    android:layout_marginTop="24dp"
    style="@style/Widget.AppCompat.Button.Borderless" />

</LinearLayout>